# order_domain_model

./: Cargo.toml  README.md  rustfmt.toml
src/: entities.rs  lib.rs  logic.rs  mod.rs
